# AgentRoom

./: .gitignore  BRAINSTORM.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: SECURITY.md
docs/specs/: 2026-03-30-multi-mode-agent-integration-design.md  2026-03-30-multi-mode-agent-integration-plan.md  2026-03-30-web-ui-alpine-design.md  2026-03-30-web-ui-alpine-plan.md  2026-03-31-leader-driven-coordinator-design.md
src/agentroom/: __init__.py  __main__.py  cli.py
src/agentroom/agents/: __init__.py  anthropic.py  base.py  cli.py  ollama.py  openai.py
src/agentroom/broker/: __init__.py  queue.py
src/agentroom/coordinator/: __init__.py  prompt_builder.py  room.py
src/agentroom/protocol/: __init__.py  agent_config.py  extensions.py  models.py
src/agentroom/server/: __init__.py  app.py
src/agentroom/server/static/: app.js  index.html  styles.css
tests/unit/: test_adapters.py  test_agent_config.py  test_broker.py  test_cli_adapter.py  test_ollama_adapter.py  test_prompt_builder.py  test_protocol.py  test_room.py  test_server.py
